# Sketch

./: .gitignore  README.md
CPU/: README.md
CPU/CM/: CMakeLists.txt  benchmark.h  config.h
CPU/Coco/: CMakeLists.txt  benchmark.h  config.h
CPU/Coco/common/: CuckooMap.h
CPU/Coco/solution/: Abstract.h  Ideal.h  Merge.h  Ours.h
CPU/Count/: CMakeLists.txt  benchmark.h  config.h  main.cpp
CPU/Count/solution/: Abstract.h  Ideal.h  Merge.h  Ours.h
CPU/DD/: CMakeLists.txt  Ideal.h  Merge.h  Ours.h  benchmark.h  config.h  main.cpp
CPU/Elastic/: CMakeLists.txt  benchmark.h  config.h
CPU/HLL/: CMakeLists.txt  benchmark.h  config.h  main.cpp
CPU/LL/: benchmark.h  config.h  main.cpp
CPU/Locher/: benchmark.h  config.h  main.cpp
CPU/UnivMon/: CMakeLists.txt  benchmark.h  config.h  main.cpp
CPU/template/: Abstract.h  Merge.h  Ours.h
DPDK/: CM_Merge.h  CM_Ours.h  Coco_Merge.h  Coco_Ours.h  Count_Merge.h  Count_Ours.h  Elastic_Merge.h  Elastic_Ours.h  HLL_Merge.h  HLL_Ours.h  Makefile  README.md  UnivMon_Merge.h  UnivMon_Ours.h  common.h  main.c
DPDK/CM/: Makefile
DPDK/Coco/: Ours.h
DPDK/Count/: Makefile  Ours.h
DPDK/Elastic/: Ours.h
DPDK/Locher/: Ours.h
DPDK/common/: HLL.h  hash.h
DPDK/template/: DPDK.h  Merge.h  Ours.h  common.h
XDP/: README.md
XDP/CM/: Ours-XDP.c  Ours-main.c
XDP/Coco/: Ours-XDP.c  Ours-main.c
XDP/Count/: Ours-XDP.c  Ours-main.c  compile.sh
XDP/Locher/: Ours-XDP.c  Ours-main.c  XDP_Locher.h
XDP/xdp_common/: Abstract.h  heap.h
common/: BitMap.h  Heap.h  SHLL.h  hash.h
sketch/: Locher.h  sketch.h
(+24 files in other folders)
